--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,10 @@
   <head>
     <title>Trip Planner</title>
     <script src="./bundle.js" defer></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css' rel='stylesheet' />
     <link href='./style.css' rel="stylesheet">
   </head>
   <body>
-    <div id='map'>
-
-    </div>
+    <div id='map'></div>
   </body>
 </html>
